Fix overflow scroll issue

--- a/hra/patternlab/site/sass/molecules/streamfield/_call-to-action.scss
+++ b/hra/patternlab/site/sass/molecules/streamfield/_call-to-action.scss
@@ -70,7 +70,7 @@
     &__right {
         position: absolute;
         top: 20px;
-        right: -20%;
+        right: -19%;
         width: 50%;
 
         @include media-query(desktop) {
